# EASY_Claude_math_tutor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  missing_packages.md
.claude/: instructions.md
.github/: copilot-instructions.md
3k - Example/: 3d_lagrange_ellipse_problems.ipynb  pyproject.toml
AUTO_JUPYTER_IN_VS_CODE/: README.md  example.pyproject.toml  setup.sh
RenameFolderAndRunSetup/: README.md
