[project]
name = "multivariable-calculus"
version = "0.1.0"
description = "Interactive notebooks for multivariable calculus concepts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "sympy>=1.13.3",
    "plotly>=5.24.1",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.5",
    "ipykernel>=6.29.0",
]
